--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -8,24 +8,23 @@
         <div class="skills-wrapper">
             <div class="skills-left">
                 <h3>My Skills</h3>
+
                 <ul>
-                    <li>Angular</li>
-                    <li>React</li>
-                    <li>ASP.NET MVC</li>
-                    <li>ASP.NET API</li>
-                    <li>SQLServer</li>
+                    @for (item of skills; track $index) {
+                    <li>{{item}}</li>
+                    }
+
                 </ul>
 
 
             </div>
             <div class="skill-right">
                 <ul class="progress">
-                    <li><span>Angular</span></li>
-                    <li><span>React</span></li>
-                    <li><span>.NET MVC</span></li>
-                    <li><span>.NET API</span></li>
-                    <li><span>SQLServer</span></li>
+                    @for (item of skills; track $index) {
+                        <li><span>{{item}}</span></li>
+                    }
                     
+
 
                 </ul>
 
@@ -37,7 +36,7 @@
 
     </div>
 
-    
+
 
 
 </section>
